crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_call_style_no_func_def.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(source, \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
