crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_defaulttags.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(&source, \"django.template.defaulttags\"))"
---
tag_rules:
  "django.template.defaulttags::tag::autoescape":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'autoescape' tag requires exactly one argument."
      - constraint:
          ChoiceAt:
            position:
              Forward: 1
            values:
              - "on"
              - "off"
        message:
          Static: "'autoescape' argument should be 'on' or 'off'"
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.defaulttags::tag::cycle":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          Static: "'cycle' tag requires at least two arguments"
      - constraint:
          RequiredKeyword:
            position:
              Backward: 1
            value: silent
        message:
          PercentFormat:
            template: "Only 'silent' flag is allowed after cycle's name, not '%s'."
            args:
              - SplitElement:
                  Backward: 1
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.defaulttags::tag::for":
    arg_constraints:
      - Min: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
    as_var: keep
  "django.template.defaulttags::tag::lorem":
    arg_constraints:
      - Exact: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 4
        message:
          PercentFormat:
            template: Incorrect format for %r tag
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
    as_var: keep
  "django.template.defaulttags::tag::now":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'now' statement takes one argument"
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "django.template.defaulttags::tag::partial":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.defaulttags::tag::partialdef":
    arg_constraints:
      - OneOf:
          - 2
          - 3
    required_keywords:
      - position:
          Forward: 2
        value: inline
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: inline
        required: true
        kind:
          Literal: inline
        position: 1
    as_var: keep
  "django.template.defaulttags::tag::querystring":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: args
        required: false
        kind: VarArgs
        position: 0
    as_var: strip
  "django.template.defaulttags::tag::regroup":
    arg_constraints:
      - Exact: 6
    required_keywords:
      - position:
          Forward: 2
        value: by
      - position:
          Forward: 4
        value: as
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 6
        message:
          Static: "'regroup' tag takes five arguments"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 2
            value: by
        message:
          Static: "second argument to 'regroup' tag must be 'by'"
      - constraint:
          RequiredKeyword:
            position:
              Forward: 4
            value: as
        message:
          Static: "next-to-last argument to 'regroup' tag must be 'as'"
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: by
        required: true
        kind:
          Literal: by
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
      - name: as
        required: true
        kind:
          Literal: as
        position: 3
      - name: var_name
        required: true
        kind: Variable
        position: 4
    as_var: keep
  "django.template.defaulttags::tag::resetcycle":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Max: 2
        message:
          PercentFormat:
            template: "%r tag accepts at most one argument."
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: name
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.defaulttags::tag::templatetag":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          Static: "'templatetag' statement takes one argument"
    extracted_args:
      - name: tag
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.defaulttags::tag::url":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument, a URL pattern name."
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "django.template.defaulttags::tag::widthratio":
    arg_constraints: []
    required_keywords:
      - position:
          Forward: 4
        value: as
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          RequiredKeyword:
            position:
              Forward: 4
            value: as
        message:
          Static: "Invalid syntax in widthratio tag. Expecting 'as' keyword"
    extracted_args:
      - name: this_value_expr
        required: true
        kind: Variable
        position: 0
      - name: max_value_expr
        required: true
        kind: Variable
        position: 1
      - name: max_width
        required: true
        kind: Variable
        position: 2
      - name: as
        required: true
        kind:
          Literal: as
        position: 3
      - name: asvar
        required: true
        kind: Variable
        position: 4
    as_var: keep
filter_arities: {}
block_specs:
  "django.template.defaulttags::tag::autoescape":
    end_tag: endautoescape
    intermediates: []
    opaque: false
  "django.template.defaulttags::tag::comment":
    end_tag: endcomment
    intermediates: []
    opaque: true
  "django.template.defaulttags::tag::filter":
    end_tag: endfilter
    intermediates: []
    opaque: false
  "django.template.defaulttags::tag::for":
    end_tag: endfor
    intermediates:
      - empty
    opaque: false
  "django.template.defaulttags::tag::if":
    end_tag: endif
    intermediates:
      - elif
      - else
    opaque: false
  "django.template.defaulttags::tag::ifchanged":
    end_tag: endifchanged
    intermediates:
      - else
    opaque: false
  "django.template.defaulttags::tag::spaceless":
    end_tag: endspaceless
    intermediates: []
    opaque: false
  "django.template.defaulttags::tag::verbatim":
    end_tag: endverbatim
    intermediates: []
    opaque: false
  "django.template.defaulttags::tag::with":
    end_tag: endwith
    intermediates: []
    opaque: false
