crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_empty_source.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(\"\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
