crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_filter_method_style.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.filters\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
