crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_invalid_python.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(\"def {invalid\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
