crates/djls-semantic/src/snapshots/djls_semantic__python__tests__golden_testtags.snap
---
source: crates/djls-semantic/src/python.rs
expression: "snapshot(extract_rules(&source, \"tests.template_tests.templatetags.testtags\"))"
---
tag_rules: {}
filter_arities:
  "tests.template_tests.templatetags.testtags::filter::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
